# budgettracker

./: .gitignore  CMakeLists.txt  README.md  budget.csv  curRate.csv  main.cpp  output
cclasses/bargraph/: BarGraph.cpp  BarGraph.h
cclasses/budget/: bd_debug.cpp  bd_getters.cpp  bd_setters.cpp  budget.cpp  budget.h  budget_calcs.cpp  db_seralization.cpp  utility.cpp
cclasses/budget/budgetmanager/: bm_calculations.cpp  bm_filters.cpp  bm_getters.cpp  bm_graphs.cpp  bm_sorts.cpp  bm_utility.cpp  bm_write.cpp  budgetmanager.cpp  budgetmanager.h  budgetmanager_calcs.cpp  filters.cpp  getters.cpp  sorts.cpp  utility.cpp  write.cpp
cclasses/currency/: curConverter.cpp  curConverter.h  curRate.csv  currency.cpp  currency.h  currencyExchange.cpp  currencyExchange.h  money.cpp  money.h  money_getters.cpp  vectorCurrency.cpp  vectorCurrency.h
cclasses/datetime/: datetime.cpp  datetime.h
cclasses/piechart/: PieChart.cpp  PieChart.h
cclasses/sfmlGraphics/: banner.cpp  banner.h  button.h  dropdownMenu.cpp  dropdownMenu.h  guiBarGraph.h  guiPieChart.h  guiPiechart.cpp  roundedRectangle.cpp  roundedRectangle.h  sidebar.cpp  sidebar.h  table.cpp  table.h  textbox.cpp  textbox.h  textboxBg.cpp  textboxBg.h  topbar.cpp  topbar.h
cclasses/users/: user.cpp  user.h
cclasses/users/authentication/: authentication.cpp  authentication.h
cclasses/users/csvfile/: CSVFile.cpp  CSVFile.h
cclasses/users/login/: login.cpp  login.h
cclasses/users/signup/: signUp.cpp  signUp.h
gui/banner/: banner.cpp  banner.h
gui/button/: button.cpp  button.h
gui/dropdown_menu/: dropdownMenu.cpp  dropdownMenu.h
gui/gui_graphs/: guiBarGraph.cpp  guiBarGraph.h  guiPieChart.h  guiPiechart.cpp
gui/rounded_rectangle/: roundedRectangle.cpp  roundedRectangle.h
gui/sidebar/: sidebar.cpp  sidebar.h
gui/table/: table.cpp  table.h
gui/textbox/: textbox.cpp  textbox.h
gui/topbar/: topbar.cpp  topbar.h
networking/client/: ClientConnection.cpp  ClientConnection.h
networking/server/: ServerConnection.cpp  ServerConnection.h
pages/add_expense_page/: add_expense_page.cpp  add_expense_page.h
pages/add_income_page/: add_income_page.cpp  add_income_page.h
pages/dashboard_page/: dashboard_page.cpp  dashboard_page.h
pages/forex_page/: forex_page.cpp  forex_page.h
pages/login_page/: login_page.cpp  login_page.h
pages/see_report_page/: see_report_page.cpp  see_report_page.h
pages/signup_page/: signup_page.cpp  signup_page.h
paste inside cmake-build-debug/: budget.csv  curRate.csv
utility/: utility.cpp  utility.h
